# test-ai-agent-Ideas

./: README.md  Small_Tests_Only.ipynb  pyproject.toml
Streamlit_Crew_Agent/: app.py  pdf_ops.py
